# zero2prod

./: .env  Cargo.toml
.github/workflows/: general.yml
migrations/: 20260711224753_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
