[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
reqwest = "0.11"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# we need the optional `derive` feature to use `serde`'s procedural macros:
# `#[derive(serde::Seerialize)]` and `#[derive(serde::Deserialize)]`
# The feature is not enabled by default to avoid pulling in
# unnecessary dependencies for prijects that do not need it.
serde = { version = "1", features = ["derive"] }
