[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
reqwest = "0.11"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# we need the optional `derive` feature to use `serde`'s procedural macros:
# `#[derive(serde::Seerialize)]` and `#[derive(serde::Deserialize)]`
# The feature is not enabled by default to avoid pulling in
# unnecessary dependencies for prijects that do not need it.
serde = { version = "1", features = ["derive"] }
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
env_logger = "0.9"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"

[dependencies.sqlx]
version = "~0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
